--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h5,
 h6 {
   padding:0;
   margin:0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
 }
 
 .project-img {
@@ -30,7 +30,7 @@ h6 {
 
 h1 {
   font-size: 40px;
-  color: #f5a623;
+  color: #DA8795;
   line-height: 48px;
   display: inline;
 }
@@ -104,16 +104,18 @@ a {
 }
 
 #skills-h3 {
-  color: #f5ae23;
+  color: #DA8795;
   display: none;
 }
 
+/* Not used any more
 .orange {
-  background-color: #f5ae23;
+  background-color: #395175;
 }
+*/
 
-.orange-text {
-  color: #f5ae23;
+.gray-text {
+  color: #aaaaaa;
 }
 
 .white-text {
@@ -133,7 +135,7 @@ a {
 
 /* TODO: Replace with image later */
 #header {
-  background-color: #484848;
+  background-color: #395175;
 }
 
 .flex-box {
